--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -32,7 +32,7 @@ If you'll excuse the extremely trite metaphor.
 You've been loving, kind, helpful, and the most wonderful partner anyone could ask for.
 I am truly blessed to know you and love you.
 
-I would also like to thank the fantastic team at Leeds' ARC High-Performance Computing department, considering the bulk of this thesis involves many 3D numerical simulations, my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''.
+I would also like to thank the fantastic team at Leeds' ARC High-Performance Computing department, considering the bulk of this thesis involves many 3D numerical simulations, my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''\footnote{I have quantified the amount of CPU time I have used up, it is in the region of 250 core-years!}.
 I also apologise for that one time I ran my simulations on the login nodes for multiple days, I swear it was an accident.
 
 I would also like to thank two figures from my formative years for inspiring me.
