--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -1326,6 +1326,21 @@
   file = {/Users/py13je/Zotero/storage/PL2SEL2X/Eatson et al. - 2022 - An exploration of dust grain growth within WCd sys.pdf;/Users/py13je/Zotero/storage/7X6HSZFE/2204.html}
 }
 
+@unpublished{eatsonExploringDustGrowth2022,
+  title = {Exploring Dust Growth in the Episodic {{WCd}} System {{WR140}}},
+  author = {Eatson, J. W. and Pittard, J. M. and Van Loo, S.},
+  date = {2022-04-26},
+  eprint = {2204.12354},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph},
+  url = {http://arxiv.org/abs/2204.12354},
+  urldate = {2022-04-27},
+  abstract = {The wind collision region (WCR) in a colliding wind binary (CWB) is a particularly violent place, as such, it is surprising that it is also a region where significant quantities of interstellar dust can form. In extreme cases, approximately 30\% of the total mass loss rate of a system can be converted into dust. These regions are poorly understood, as observation and simulation of these systems are difficult. In our previous paper we simulated dust growth in CWB systems using an advected scalar model and found our model to be suitable for qualitative study. For this paper we simulated the periodic dust forming CWB (WCd) system WR140 with our dust model, to determine how dust growth changes over the systems periastron passage. We found that dust production increases significantly at periastron passage, which is consistent with IR emission of the surrounding dusty shell. We also find that the dust production rate of the system decreases rapidly as the stars recede from each other, though the rate of decrease is significantly lower than the rate of increase during periastron passage. This was found to be due to strong cooling and its associated thermal instabilities, resulting in cool, high-density pockets of gas in the WCR where dust forms. The WCR also shows a degree of hysteresis, resulting in a radiative post-shock flow even when the stars are separated enough for the region to behave adiabatically.},
+  archiveprefix = {arXiv},
+  keywords = {Astrophysics - Solar and Stellar Astrophysics},
+  file = {/Users/py13je/Zotero/storage/YGC9XVIJ/Eatson et al. - 2022 - Exploring dust growth in the episodic WCd system W.pdf;/Users/py13je/Zotero/storage/LPRYGEV8/2204.html}
+}
+
 @article{eddingtonInternalConstitutionStars1920,
   title = {The {{Internal Constitution}} of the {{Stars}}},
   author = {Eddington, A. S.},
