Fixed slight issues in acknowledgements+print ver.

--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -18,6 +18,7 @@ I also owe a debt to my supervisor, Dr Julian Pittard, you've gone above and bey
 Your help and advice throughout this project have been astounding, from sending corrections to papers within a single day, to patiently explaining the finer points of the work when I was completely clueless in the first\footnote{And arguably second, third and fourth.} year.
 I'm still amazed how you can rattle off a paper or three from memory when I've come into your office asking questions about a very specific part of my work.
 Honestly, how do you do that? It's very impressive!
+I would also like to profusely thank my secondary supervisor Dr Sven van Loo, who was invaluable in editing both of my published papers; as well as my fellow postgraduates, who were always willing to have a cup of coffee and chat when things got tough.
 
 No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors' friends.
 I first met some of you on the literal first day of my undergraduate degree, it's quite incredible how you've all tolerated my nonsense for so long.
@@ -48,7 +49,7 @@ Thank you so much, both of you, you may not realise it, you may not ever read th
 
 % This one might need to be moved, considering the above paragraph 
 Finally, I would like to thank Leandro Panizzon and his wife, Margarita.
-Though Methylphenidate was originally synthesised by him to treat her low blood pressure, it also works quite well for dragging my attention-deficit disorder riddled brain through this PhD.
+Though Methylphenidate was originally synthesised by him to treat her low blood pressure, it also works well for dragging my attention-deficit riddled brain through this PhD.
 
 \end{acknowledgements}
 %\end{acknowledgmentslong}
