--- a/References/library.bib
+++ b/References/library.bib
@@ -1453,6 +1453,21 @@
   file = {/Users/py13je/Zotero/storage/55CDCAY2/Gerin et al. - 2016 - Interstellar Hydrides.pdf}
 }
 
+@article{geryaCharacteristicsbasedMarkerincellMethod2003,
+  title = {Characteristics-Based Marker-in-Cell Method with Conservative Finite-Differences Schemes for Modeling Geological Flows with Strongly Variable Transport Properties},
+  author = {Gerya, Taras V. and Yuen, David A.},
+  year = {2003},
+  month = dec,
+  journal = {Physics of the Earth and Planetary Interiors},
+  volume = {140},
+  pages = {293--318},
+  issn = {0031-9201},
+  doi = {10.1016/j.pepi.2003.09.006},
+  abstract = {We have designed a 2D thermal-mechanical code, incorporating both a characteristics based marker-in-cell method and conservative finite-difference (FD) schemes. In this paper we will give a detailed description of this code. The temperature equation is advanced in time with the Lagrangian marker techniques based on the method of characteristics and the temperature solution is interpolated back to an Eulerian grid configuration at each timestep. This marker approach allows for the accurate portrayal of very fine thermal structures. For attaining a high relative accuracy in the solution of the matrix equations associated with both the momentum and temperature equations, we have employed the direct matrix inversion technique, which becomes feasible with the advent of very large shared-memory machines. Our conservative finite-difference schemes allow us to capture sharp variations of the stresses and thermal gradients in problems with a strongly variable viscosity and thermal conductivity. We have tested this code with numerous examples drawn from Rayleigh-Taylor instabilities, the descent of a stiff object into a medium with a lower viscosity, viscous heating and flows with non-Netwonian rheology. We have also benchmarked successfully with variable viscosity convection for lateral viscosity contrast up to 10 8. We have delineated the regions in thermal problems where the diffusive nature of the temperature equation changes from its parabolic character locally to a non-linear hyperbolic-like equation due to the presence of variable thermal conductivity. Finally we discuss the applicability of this marker-based and finite-difference technique to other evolutionary equations in geophysics.},
+  annotation = {ADS Bibcode: 2003PEPI..140..293G},
+  file = {/Users/py13je/Zotero/storage/C43D9EY5/Gerya and Yuen - 2003 - Characteristics-based marker-in-cell method with c.pdf}
+}
+
 @article{girard_winds_1987,
   title = {Winds in Collision. {{III}} - {{Modeling}} the Interaction Nebulae of Eruptive Symbiotics},
   author = {Girard, T. and Willson, L. A.},
@@ -2399,6 +2414,54 @@
   file = {/Users/py13je/Zotero/storage/IKEYHGN4/Le Teuff - 2002 - A Model of Dust Formation in Clumpy Wolf-Rayet Win.pdf;/Users/py13je/Zotero/storage/6BCC7IDS/abstract.html}
 }
 
+@article{lichtenbergEffectsShortlivedRadionuclides2016,
+  title = {The Effects of Short-Lived Radionuclides and Porosity on the Early Thermo-Mechanical Evolution of Planetesimals},
+  author = {Lichtenberg, Tim and Golabek, Gregor J. and Gerya, Taras V. and Meyer, Michael R.},
+  year = {2016},
+  month = aug,
+  journal = {Icarus},
+  volume = {274},
+  pages = {350--365},
+  issn = {0019-1035},
+  doi = {10.1016/j.icarus.2016.03.004},
+  abstract = {The thermal history and internal structure of chondritic planetesimals, assembled before the giant impact phase of chaotic growth, potentially yield important implications for the final composition and evolution of terrestrial planets. These parameters critically depend on the internal balance of heating versus cooling, which is mostly determined by the presence of short-lived radionuclides (SLRs), such as 26Al and 60Fe, as well as the heat conductivity of the material. The heating by SLRs depends on their initial abundances, the formation time of the planetesimal and its size. It has been argued that the cooling history is determined by the porosity of the granular material, which undergoes dramatic changes via compaction processes and tends to decrease with time. In this study we assess the influence of these parameters on the thermo-mechanical evolution of young planetesimals with both 2D and 3D simulations. Using the code family I2ELVIS/I3ELVIS we have run numerous 2D and 3D numerical finite-difference fluid dynamic models with varying planetesimal radius, formation time and initial porosity. Our results indicate that powdery materials lowered the threshold for melting and convection in planetesimals, depending on the amount of SLRs present. A subset of planetesimals retained a powdery surface layer which lowered the thermal conductivity and hindered cooling. The effect of initial porosity was small, however, compared to those of planetesimal size and formation time, which dominated the thermo-mechanical evolution and were the primary factors for the onset of melting and differentiation. We comment on the implications of this work concerning the structure and evolution of these planetesimals, as well as their behavior as possible building blocks of terrestrial planets.},
+  keywords = {Astrophysics - Earth and Planetary Astrophysics,Interiors,Physics - Geophysics,Planetary formation,Planetesimals,Terrestrial planets,Thermal histories},
+  annotation = {ADS Bibcode: 2016Icar..274..350L},
+  file = {/Users/py13je/Zotero/storage/Y7HJSC24/Lichtenberg et al. - 2016 - The effects of short-lived radionuclides and poros.pdf}
+}
+
+@article{lichtenbergIsotopicEnrichmentForming2016,
+  title = {Isotopic Enrichment of Forming Planetary Systems from Supernova Pollution},
+  author = {Lichtenberg, Tim and Parker, Richard J. and Meyer, Michael R.},
+  year = {2016},
+  month = nov,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {462},
+  pages = {3979--3992},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stw1929},
+  abstract = {Heating by short-lived radioisotopes (SLRs) such as 26Al and 60Fe fundamentally shaped the thermal history and interior structure of Solar system planetesimals during the early stages of planetary formation. The subsequent thermo-mechanical evolution, such as internal differentiation or rapid volatile degassing, yields important implications for the final structure, composition and evolution of terrestrial planets. SLR-driven heating in the Solar system is sensitive to the absolute abundance and homogeneity of SLRs within the protoplanetary disc present during the condensation of the first solids. In order to explain the diverse compositions found for extrasolar planets, it is important to understand the distribution of SLRs in active planet formation regions (star clusters) during their first few Myr of evolution. By constraining the range of possible effects, we show how the imprint of SLRs can be extrapolated to exoplanetary systems and derive statistical predictions for the distribution of 26Al and 60Fe based on N-body simulations of typical to large clusters (103-104 stars) with a range of initial conditions. We quantify the pollution of protoplanetary discs by supernova ejecta and show that the likelihood of enrichment levels similar to or higher than the Solar system can vary considerably, depending on the cluster morphology. Furthermore, many enriched systems show an excess in radiogenic heating compared to Solar system levels, which implies that the formation and evolution of planetesimals could vary significantly depending on the birth environment of their host stars.},
+  keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Solar and Stellar Astrophysics,Physics - Geophysics,planetary systems,planets and satellites: formation,planets and satellites: terrestrial planets,protoplanetary discs,stars: formation,supernovae: general},
+  annotation = {ADS Bibcode: 2016MNRAS.462.3979L},
+  file = {/Users/py13je/Zotero/storage/YZFMQVGU/Lichtenberg et al. - 2016 - Isotopic enrichment of forming planetary systems f.pdf}
+}
+
+@article{lichtenbergWaterBudgetDichotomy2019,
+  title = {A Water Budget Dichotomy of Rocky Protoplanets from {{26Al-heating}}},
+  author = {Lichtenberg, Tim and Golabek, Gregor J. and Burn, Remo and Meyer, Michael R. and Alibert, Yann and Gerya, Taras V. and Mordasini, Christoph},
+  year = {2019},
+  month = feb,
+  journal = {Nature Astronomy},
+  volume = {3},
+  pages = {307--313},
+  issn = {2397-3366},
+  doi = {10.1038/s41550-018-0688-5},
+  abstract = {In contrast to the water-poor planets of the inner Solar System, stochasticity during planetary formation1,2 and order-of-magnitude deviations in exoplanet volatile contents3 suggest that rocky worlds engulfed in thick volatile ice layers4,5 are the dominant family of terrestrial analogues6,7 among the extrasolar planet population. However, the distribution of compositionally Earth-like planets remains insufficiently constrained3, and it is not clear whether the Solar System is a statistical outlier or can be explained by more general planetary formation processes. Here we use numerical models of planet formation, evolution and interior structure to show that a planet's bulk water fraction and radius are anti-correlated with initial 26Al levels in the planetesimal-based accretion framework. The heat generated by this short-lived radionuclide rapidly dehydrates planetesimals8 before their accretion onto larger protoplanets and yields a system-wide correlation9,10 of planetary bulk water abundances, which, for instance, can explain the lack of a clear orbital trend in the water budgets of the TRAPPIST-1 planets11. Qualitatively, our models suggest two main scenarios for the formation of planetary systems: high-26Al systems, like our Solar System, form small, water-depleted planets, whereas those devoid of 26Al predominantly form ocean worlds. For planets of similar mass, the mean planetary transit radii of the ocean planet population can be up to about 10\% larger than for planets from the 26Al-rich formation scenario.},
+  keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Solar and Stellar Astrophysics,Physics - Geophysics},
+  annotation = {ADS Bibcode: 2019NatAs...3..307L},
+  file = {/Users/py13je/Zotero/storage/CUYNGFH8/Lichtenberg et al. - 2019 - A water budget dichotomy of rocky protoplanets fro.pdf}
+}
+
 @book{longairHighEnergyAstrophysics2011,
   title = {High {{Energy Astrophysics}}},
   author = {Longair, Malcolm S.},
@@ -3116,6 +3179,67 @@
   file = {/Users/py13je/Zotero/storage/LK4ZNUFG/Parker - 2020 - The birth environment of planetary systems.pdf}
 }
 
+@article{parkerBirthEnvironmentPlanetarya,
+  title = {The Birth Environment of Planetary Systems},
+  author = {Parker, Richard J.},
+  journal = {Royal Society Open Science},
+  volume = {7},
+  number = {11},
+  pages = {201271},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rsos.201271},
+  abstract = {Star and planet formation are inextricably linked. In the earliest phases of the collapse of a protostar, a disc forms around the young star and such discs are observed for the first several million years of a star's life. It is within these circumstellar, or protoplanetary, discs that the first stages of planet formation occur. Recent observations from the Atacama large millimetre array (ALMA) suggest that planet formation may already be underway after only 1 Myr of a star's life. However, stars do not form in isolation; they form from the collapse and fragmentation of giant molecular clouds several parsecs in size. This results in young stars forming in groups\textemdash often referred to as `clusters'. In these star-forming regions, the stellar density is much higher than the location of the Sun and other stars in the Galactic disc that host exoplanets. As such, the environment where stars form has the potential to influence the planet formation process. In star-forming regions, protoplanetary discs can be truncated or destroyed by interactions with passing stars, as well as photoevaporation from the radiation fields of very massive stars. Once formed, the planets themselves can have their orbits altered by dynamical encounters\textemdash either directly from passing stars or through secondary effects such as the Kozai\textendash Lidov mechanism. In this contribution, I review the different processes that can affect planet formation and stability in star-forming regions. I discuss each process in light of the typical range of stellar densities observed for star-forming regions. I finish by discussing these effects in the context of theories for the birth environment of the Solar System.},
+  keywords = {extrasolar planets,planet formation,Solar System,star formation},
+  file = {/Users/py13je/Zotero/storage/82695ZH9/Parker - The birth environment of planetary systems.pdf}
+}
+
+@article{parkerConstraintsStarFormation2022,
+  title = {Constraints on Star Formation in {{NGC}} 2264},
+  author = {Parker, Richard J. and Schoettler, Christina},
+  year = {2022},
+  month = feb,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {510},
+  pages = {1136--1147},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stab3460},
+  abstract = {We quantify the spatial distribution of stars for two subclusters centred around the massive/intermediate-mass stars S Mon and IRS 1/2 in the NGC 2264 star-forming region. We find that both subclusters have neither a substructured nor a centrally concentrated distribution according to the \$\textbackslash mathcal \{Q\}\$-parameter. Neither subcluster displays mass segregation according to the {$\Lambda$}MSR ratio, but the most massive stars in IRS 1/2 have higher relative surface densities according to the {$\Sigma$}LDR ratio. We then compare these quantities to the results of N-body simulations to constrain the initial conditions of NGC 2264, which are consistent with having been dense (\$\textbackslash tilde\{\textbackslash rho \} \textbackslash sim 10\^4\$ M{$\odot$} pc-3), highly substructured and subvirial. These initial conditions were also derived from a separate analysis of the runaway and walkaway stars in the region, and indicate that star-forming regions within 1 kpc of the Sun likely have a broad range of initial stellar densities. In the case of NGC 2264, its initial stellar density could have been high enough to cause the destruction or truncation of protoplanetary discs and fledgling planetary systems due to dynamical encounters between stars in the early stages of its evolution.},
+  keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Solar and Stellar Astrophysics,methods: numerical,open clusters and associations: general,open clusters and associations: individual: NGC 2264,stars: formation},
+  annotation = {ADS Bibcode: 2022MNRAS.510.1136P},
+  file = {/Users/py13je/Zotero/storage/KFLFNL7D/Parker and Schoettler - 2022 - Constraints on star formation in NGC 2264.pdf}
+}
+
+@article{parkerDidSolarSystem2016,
+  title = {Did the {{Solar}} System Form in a Sequential Triggered Star Formation Event?},
+  author = {Parker, Richard J. and Dale, James E.},
+  year = {2016},
+  month = feb,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {456},
+  pages = {1066--1072},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stv2765},
+  abstract = {The presence and abundance of the short-lived radioisotopes (SLRs) 26Al and 60Fe during the formation of the Solar system is difficult to explain unless the Sun formed in the vicinity of one or more massive star(s) that exploded as supernovae. Two different scenarios have been proposed to explain the delivery of SLRs to the protosolar nebula: (I) direct pollution of the protosolar disc by supernova ejecta, and (II) the formation of the Sun in a sequential star formation event in which supernovae shockwaves trigger further star formation which is enriched in SLRs. The sequentially triggered model has been suggested as being more astrophysically likely than the direct pollution scenario. In this paper, we investigate this claim by analysing a combination of N-body and smoothed particle hydrodynamics simulations of star formation. We find that sequential star formation would result in large age spreads (or even bi-modal age distributions for spatially coincident events) due to the dynamical relaxation of the first star formation event(s). Secondly, we discuss the probability of triggering spatially and temporally discrete populations of stars and find this to be only possible in very contrived situations. Taken together, these results suggest that the formation of the Solar system in a triggered star formation event is as improbable, if not more so, than the direct pollution of the protosolar disc by a supernova.},
+  keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Solar and Stellar Astrophysics,H II regions,methods: numerical,open clusters and associations: general,Physics - Geophysics,planets and satellites: formation,stars: formation},
+  annotation = {ADS Bibcode: 2016MNRAS.456.1066P},
+  file = {/Users/py13je/Zotero/storage/PPFIVUFA/Parker and Dale - 2016 - Did the Solar system form in a sequential triggere.pdf}
+}
+
+@article{parkerSupernovaEnrichmentDynamical2014,
+  title = {Supernova Enrichment and Dynamical Histories of Solar-Type Stars in Clusters},
+  author = {Parker, Richard J. and Church, Ross P. and Davies, Melvyn B. and Meyer, Michael R.},
+  year = {2014},
+  month = jan,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {437},
+  pages = {946--958},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stt1957},
+  abstract = {We use N-body simulations of star cluster evolution to explore the hypothesis that short-lived radioactive isotopes found in meteorites, such as 26Al, were delivered to the Sun's protoplanetary disc from a supernova at the epoch of Solar system formation. We cover a range of star cluster formation parameter space and model both clusters with primordial substructure and those with smooth profiles. We also adopt different initial virial ratios - from cool, collapsing clusters to warm, expanding associations. In each cluster, we place the same stellar population; the clusters each have 2100 stars and contain one massive 25 M{$\odot$} star which is expected to explode as a supernova at about 6.6 Myr. We determine the number of solar (G)-type stars that are within 0.1-0.3 pc of the 25 M{$\odot$} star at the time of the supernova, which is the distance required to enrich the protoplanetary disc with the 26Al abundances found in meteorites. We then determine how many of these G-dwarfs are unperturbed `singletons'; stars which are never in close binaries, nor suffer sub-100 au encounters, and which also do not suffer strong dynamical perturbations. The evolution of a suite of 20 initially identical clusters is highly stochastic, with the supernova enriching over 10 G-dwarfs in some clusters, and none at all in others. Typically, only {$\sim$}25 per cent of clusters contain enriched, unperturbed singletons, and usually only one to two per cluster (from a total of 96 G-dwarfs in each cluster). The initial conditions for star formation do not strongly affect the results, although a higher fraction of supervirial (expanding) clusters would contain enriched G-dwarfs if the supernova occurred earlier than 6.6 Myr. If we sum together simulations with identical initial conditions, then {$\sim$}1 per cent of all G-dwarfs in our simulations are enriched, unperturbed singletons.},
+  keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - Earth and Planetary Astrophysics,methods: numerical,open clusters and associations: general,Physics - Geophysics,planetary systems,stars: formation},
+  annotation = {ADS Bibcode: 2014MNRAS.437..946P}
+}
+
 @article{parkin_3d_2008,
   title = {A {{3D}} Dynamical Model of the Colliding Winds in Binary Systems},
   author = {Parkin, E. R. and Pittard, J. M.},
@@ -3644,6 +3768,20 @@
   year = {2007},
   volume = {37},
   publisher = {{Cambridge university press Cambridge}}
+}
+
+@article{russellOriginShortLivedRadionuclides2001,
+  title = {Origin of {{Short-Lived Radionuclides}}},
+  author = {Russell, Sara S. and Gounelle, Matthieu and Hutchison, Robert},
+  year = {2001},
+  journal = {Philosophical Transactions: Mathematical, Physical and Engineering Sciences},
+  volume = {359},
+  number = {1787},
+  pages = {1991--2004},
+  publisher = {{The Royal Society}},
+  issn = {1364-503X},
+  abstract = {This paper reviews the evidence for short-lived radionuclides in the early Solar System and critically evaluates models for their origin. Radionuclides with half-lives of less than 50 Myr for which firm and consistent evidence has been found are {$<$}latex{$>\$\sphat\lbrace$}10\vphantom\{\}Be,\textbackslash{$>\sphat\lbrace$}26\vphantom\{\}Al, \textbackslash{$>\sphat\lbrace$}41\vphantom\{\}Ca,\textbackslash{$>\sphat\lbrace$}53\vphantom\{\}Mn,\textbackslash{$>\sphat\lbrace$}60\vphantom\{\}Fe,\textbackslash{$>\sphat\lbrace$}107\vphantom\{\}Pd,\textbackslash{$>\sphat\lbrace$}129\vphantom\{\}I\${$<$}/latex{$>$} and \textsuperscript{182}Hf. The oldest Solar System objects, calcium-aluminium-rich inclusions (CAIs), contained {$<$}latex{$>\$\sphat\lbrace$}10\vphantom\{\}Be, \textbackslash{$>\sphat\lbrace$}26\vphantom\{\}Al,\textbackslash{$>\sphat\lbrace$}41\vphantom\{\}Ca\${$<$}/latex{$>$} and \textsuperscript{53}Mn on formation. We discuss whether a spallation or stellar origin for the radionuclides is more likely, and conclude that the initial presence of short-lived radionuclides in CAIs can be most easily explained if these formed by spallation reactions close to the protosun.},
+  file = {/Users/py13je/Zotero/storage/4WAILCK5/Russell et al. - 2001 - Origin of Short-Lived Radionuclides.pdf}
 }
 
 @article{ruuthHighOrderStrongStabilityPreservingRungeKutta2005,
