Some fixes Quick commit as about to merge paper work

--- a/Appendix/Appendix.tex
+++ b/Appendix/Appendix.tex
@@ -106,7 +106,7 @@ Learning that perhaps the bulk of the infrastructure we use rests almost entirel
 This simulations in this thesis were performed on the ARC3 and ARC4 computers, part of the High Performance Computing facilities at the University of Leeds, UK.
 According to the SGE log file I had used approximately \SI{8e+09}{s} of cumulative CPU time on ARC3 and ARC4 (Fig. \ref{fig:cpugraph}) over the course of this PhD, which is over \num{250} core-years!
 Much of the earlier development and testing work was undertaken on workstations provided by the department.
-In particular was the 44 core workstation my supervisor used\footnote{Which I always referred to as \texttt{jumpcannon}, after Annie Jump Cannon, though the name didn't catch on.}, whose computing brunt was used frequently throughout the project.
+In particular was the 44 core workstation my supervisor used, whose computing brunt was used \note{heavily} throughout the project.
 
 \begin{figure}
   \centering
