--- a/Thesis.tex
+++ b/Thesis.tex
@@ -162,6 +162,7 @@
 \newcommand{\atom}[3]{\prescript{#2}{#3}{\text{#1}}}
 
 \newcommand{\turbo}[1]{\textcolor{red}{\emph{\textbf{\texttt{\MakeUppercase{<<!!!#1!!!>>}}}}}}
+\newcommand{\note}[1]{\textcolor{red}{\textbf{#1}}}
 
 
 \newcommand{\firstpapertitle}{An Exploration of Dust Growth Within WCd Systems Using An Advected Scalar Dust Model}
@@ -310,7 +311,6 @@
 \include{Chapters/Chapter_3_Numerical_Simulation/Numerical_Simulation.tex}
 \include{Chapters/Chapter_4_Parameter_Space_Paper/Parameter_Space.tex}
 \include{Chapters/Chapter_5_Real_Systems_Paper/Real_Systems_Paper.tex}
-% \include{Chapters/Chapter_6_Terminal_Velocity_Paper/Terminal_Velocity_Paper.tex}
 \include{Chapters/Chapter_7_Final_Notes/Final_Notes.tex}
 
 %\appendix
